- setup poetry within project so we can check the template content - add package author name and email as a question - flake8 config tweaks to make it slightly more similar to ruff setup - update ruff to latest & update config based on changes - default to black line length of 88 - add a "lab" concept (TODO: move this into beaker itself) - code fixes / mypy / linting

--- a/copier.yaml
+++ b/copier.yaml
@@ -1,17 +1,22 @@
+_subdirectory: template_content
+
 # questions
 project_name:
     type: str
     help: Name for this project.
     placeholder: "sample-app"
 
+author_name:
+    type: str
+    help: Package author name
+
+author_email:
+    type: str
+    help: Package author email
+
 ide_vscode:
     type: bool
     help: Do you want to add VSCode configuration?
-    default: yes
-
-use_python_poetry:
-    type: bool
-    help: Do you want to use Poetry for dependency management?
     default: yes
 
 python_linter:
@@ -42,5 +47,3 @@ use_python_pip_audit:
     type: bool
     help: Do you want to use Pip-Audit?
     default: yes
-
-_subdirectory: template_content
