Speed up testing by using details and accepting url

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,8 @@
         "--name",
         "test_output",
         "--no-git",
+        "--defaults",
+        "--accept-template-url",
         "--template-url",
         "${workspaceFolder}",
       ],
