Making it so you don't need algokit installed if you aren't running poetry install

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,9 @@
         "--accept-template-url",
         "--template-url",
         "${workspaceFolder}",
+        "-a",
+        "run_poetry_install",
+        "False"
       ],
       "type": "shell",
       "group": {
