--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
@@ -11,7 +11,8 @@
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     },
     {
       "label": "Stop AlgoKit Sandbox",
@@ -23,7 +24,8 @@
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     },
     {
       "label": "Reset AlgoKit Sandbox",
@@ -35,7 +37,8 @@
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
-      }
+      },
+      "problemMatcher": []
     }
   ]
 }
