feat: add launch tasks showcasing build and deployment

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json
@@ -2,11 +2,34 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Compile PyTEAL smart contracts to .teal",
+      "name": "Build & Deploy Beaker application",
       "type": "python",
       "request": "launch",
       "module": "smart_contracts",
-      "cwd": "${workspaceFolder}"
+      "cwd": "${workspaceFolder}",
+      "preLaunchTask": "Start AlgoKit LocalNet"
+    },
+    {
+      "name": "Build Beaker application",
+      "type": "python",
+      "request": "launch",
+      "module": "smart_contracts",
+      "args": [
+        "build"
+      ],
+      "cwd": "${workspaceFolder}",
+      "preLaunchTask": "Start AlgoKit LocalNet"
+    },
+    {
+      "name": "Deploy Built Beaker application",
+      "type": "python",
+      "request": "launch",
+      "module": "smart_contracts",
+      "args": [
+        "deploy"
+      ],
+      "cwd": "${workspaceFolder}",
+      "preLaunchTask": "Start AlgoKit LocalNet"
     }
   ]
 }
