--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-beaker-pyteal = { git = "https://github.com/algorand-devrel/beaker", branch = "v1" }
+beaker-pyteal = { git = "https://github.com/daniel-makerx/beaker", branch = "add-algokit-utils" }
+algokit-utils = { git = "https://github.com/algorandfoundation/algokit-utils-py", branch = "add-application-client" }
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.171"
 black = {extras = ["d"], version = "^22.10.0"}
 flake8 = "^6.0.0"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
