feat(deploy): Added TypeScript deployment option

--- a/copier.yaml
+++ b/copier.yaml
@@ -22,6 +22,14 @@ ide_vscode:
     help: Do you want to add VSCode configuration?
     default: yes
 
+deployment_language:
+    type: str
+    help: What programming language do you want to use for your contract deployment code?
+    choices:
+        Python: "python"
+        TypeScript: "typescript"
+    default: "python"
+
 python_linter:
     type: str
     help: Do you want to use a Python linter?
