--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-beaker-pyteal = "^0.5.0"
+beaker-pyteal = "1.0.0b2"
+algokit-utils = "0.1.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.0.171"
+ruff = "^0.0.254"
 black = {extras = ["d"], version = "^22.10.0"}
 flake8 = "^6.0.0"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
