--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
@@ -2,12 +2,38 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Build Beaker application",
+      "command": "${workspaceFolder}/.venv/bin/python",
+      "windows": {
+        "command": "${workspaceFolder}/.venv/Scripts/python.exe"
+      },
+      "args": ["-m", "smart_contracts", "build"],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Build Beaker application (+ LocalNet)",
+      "command": "${workspaceFolder}/.venv/bin/python",
+      "windows": {
+        "command": "${workspaceFolder}/.venv/Scripts/python.exe"
+      },
+      "args": ["-m", "smart_contracts", "build"],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "dependsOn": "Start AlgoKit LocalNet",
+      "problemMatcher": []
+    },
+    {
       "label": "Start AlgoKit LocalNet",
       "command": "algokit",
-      "args": [
-        "localnet",
-        "start"
-      ],
+      "args": ["localnet", "start"],
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
@@ -17,10 +43,7 @@
     {
       "label": "Stop AlgoKit LocalNet",
       "command": "algokit",
-      "args": [
-        "localnet",
-        "stop"
-      ],
+      "args": ["localnet", "stop"],
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
@@ -30,10 +53,7 @@
     {
       "label": "Reset AlgoKit LocalNet",
       "command": "algokit",
-      "args": [
-        "localnet",
-        "reset"
-      ],
+      "args": ["localnet", "reset"],
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}"
