fix: Tweaks to the TypeScript template

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Run template using algokit (no-prompts)",
+      "label": "Run template using algokit (Python, no-prompts)",
       "command": "algokit",
       "args": [
         "-v",
@@ -14,7 +14,37 @@
         "--UNSAFE-SECURITY-accept-template-url",
         "--template-url",
         "${workspaceFolder}",
+        "--template-url-ref",
+        "HEAD",
         "--no-bootstrap"
+      ],
+      "type": "shell",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "dependsOn": ["Delete test_output folder"],
+      "problemMatcher": []
+    },
+    {
+      "label": "Run template using algokit (TypeScript, no-prompts)",
+      "command": "algokit",
+      "args": [
+        "-v",
+        "init",
+        "--name",
+        "test_output",
+        "--no-git",
+        "--defaults",
+        "--UNSAFE-SECURITY-accept-template-url",
+        "--template-url",
+        "${workspaceFolder}",
+        "--template-url-ref",
+        "HEAD",
+        "--no-bootstrap",
+        "-a",
+        "deployment_language",
+        "typescript"
       ],
       "type": "shell",
       "group": {
@@ -36,6 +66,8 @@
         "--UNSAFE-SECURITY-accept-template-url",
         "--template-url",
         "${workspaceFolder}",
+        "--template-url-ref",
+        "HEAD",
         "--no-bootstrap"
       ],
       "type": "shell",
