--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -35,8 +35,8 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           poetry run ruff .
 
-      - name: Check types with mypy
-        run: poetry run mypy
+      #- name: Check types with mypy
+      #  run: poetry run mypy
 
       - name: Run tests
         shell: bash
