--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ruff = "^0.0.254"
 black = {extras = ["d"], version = "^22.10.0"}
 flake8 = "^6.0.0"
 pytest = "^7.2.2"
+mypy = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core"]
