--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,6 @@ per-file-ignores = {}
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 # Assume Python 3.10.
 target-version = "py310"
+
+[tool.pytest.ini_options]
+pythonpath = ["tests"]
