--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = {extras = ["d"], version = "^22.10.0"}
 flake8 = "^6.0.0"
 pytest = "^7.2.2"
 mypy = "^1.1.1"
+pre-commit = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -56,3 +57,11 @@ target-version = "py310"
 
 [tool.pytest.ini_options]
 pythonpath = ["tests"]
+
+[tool.mypy]
+python_version = "3.10"
+check_untyped_defs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+allow_untyped_defs = false
+strict_equality = true
