--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-beaker-pyteal = "1.0.0b2"
-algokit-utils = "0.2.0b1"
+beaker-pyteal = "^1.0.0"
+algokit-utils = "^1.0.0"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -22,6 +22,9 @@ pre-commit = "^3.2.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
 
 [tool.ruff]
 line-length = 120
