fix: ensure venv is selected in a cross-platform manner (fixes algokit-cli#237 for production template)
fix: restore default line lengths

fix: ensure VSCode settings make sense for different options

fix: set a minimum version for ruff, if enabled

fix: prefer-active-python breaks initial setup of this repo itself

fix: follow beaker, pyteal, and SC import conventions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,9 @@
   "files.associations": {
     "**/*.jinja": "jinja"
   },
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
 }
