build: add a diff step to CI

--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -35,10 +35,23 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           poetry run ruff .
 
+      - name: Configure git
+        shell: bash
+        run: |
+          # set git user and email as test invoke git
+          git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
+
       - name: Run tests
         shell: bash
         run: |
           set -o pipefail
-          # set git user and email as test invoke git
-          git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
           poetry run pytest --junitxml=pytest-junit.xml
+
+      - name: Check generated templates have been reviewed
+        shell: bash
+        run: |
+          # Add untracked files as empty so they come up in diff
+          git add -N ./tests_generated
+          # Look for changes in generated templates and error if there are any
+          git diff --exit-code --minimal ./tests_generated
+        working-directory: ${{ inputs.working-directory }}
