--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,6 +19,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Tag release
+        id: tag
         uses: TriPSs/conventional-changelog-action@v3.18.0
         with:
           skip-commit: "true"
+          tag-prefix: ""
+          
+      - name: Create Release
+        uses: actions/create-release@v1
+        if: ${{ steps.tag.outputs.skipped == 'false' }}
+        with:
+          tag_name: ${{ steps.tag.outputs.tag }}
+          release_name: ${{ steps.tag.outputs.tag }}
+          body: ${{ steps.tag.outputs.clean_changelog }}
