build: don't skip on empty changes

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           skip-commit: "true"
           tag-prefix: ""
+          skip-on-empty: "false"
           
       - name: Create Release
         uses: actions/create-release@v1
