--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flake8 = "^6.0.0"
 pytest = "^7.2.2"
 mypy = "^1.1.1"
 pre-commit = "^3.2.1"
+types-pyyaml = "^6.0.12.9"
 
 [build-system]
 requires = ["poetry-core"]
