--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -14,6 +14,7 @@ jobs:
 
   tag-release:
     runs-on: "ubuntu-latest"
+    needs: ci-check-python
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
