--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
+extend-exclude = ["tests_generated/*python_linter-flake8", "tests_generated/*python_linter-none", "template_content"]
 ignore = [
   "ANN101", # no type for self
   "ANN102", # no type for cls
