--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ unfixable = ["B", "RUF"]
 
 [tool.pytest.ini_options]
 pythonpath = ["tests"]
+testpaths = [
+    "tests",
+]
 
 [tool.mypy]
 python_version = "3.10"
