build: rename python-checks workflow to checks

--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/pr.yaml
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/pr.yaml
@@ -4,5 +4,5 @@ on: [pull_request]
 
 jobs:
   pr-check:
-    name: Check Python
-    uses: ./.github/workflows/check-python.yaml
+    name: Perform Checks
+    uses: ./.github/workflows/checks.yaml
