--- a/template_content/.env.testnet.template
+++ b/template_content/.env.testnet.template
@@ -1,6 +1,3 @@
+# this file contains algorand network settings for interacting with testnet via algonode
 ALGOD_SERVER=https://testnet-api.algonode.cloud
-ALGOD_PORT=443
-ALGOD_TOKEN=""
 INDEXER_SERVER=https://testnet-idx.algonode.cloud
-INDEXER_PORT=443
-INDEXER_TOKEN=""
