--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/cd.yaml
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/cd.yaml
@@ -42,7 +42,7 @@ jobs:
           git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
 
       - name: Deploy to testnet
-        run: algokit deploy testnet
+        run: algokit deploy testnet --ci
         env:
           # Deployer mnemonic is required. If not using the dispenser mnemonic, it must also be funded with enough
           # Algos to deploy and fund the smart contracts created
