--- a/tests_generated/test_use_dispenser-True/.copier-answers.yml
+++ b/tests_generated/test_use_dispenser-True/.copier-answers.yml
@@ -15,6 +15,7 @@ project_name: test_use_dispenser-True
 python_linter: ruff
 use_dispenser: true
 use_github_actions: true
+use_pre_commit: true
 use_python_black: true
 use_python_mypy: true
 use_python_pip_audit: true
