--- a/tests_generated/test_use_pre_commit-False/.algokit.toml
+++ b/tests_generated/test_use_pre_commit-False/.algokit.toml
@@ -1,2 +1,14 @@
 [algokit]
 min_version = "v1.1.0-beta.4"
+
+[deploy]
+command = "poetry run python -m smart_contracts deploy"
+environment_secrets = []
+
+[deploy.localnet]
+environment_secrets = []
+
+[deploy.testnet]
+environment_secrets = [
+  "DEPLOYER_MNEMONIC",
+]
