--- a/tests_generated/test_use_dispenser-True/.algokit.toml
+++ b/tests_generated/test_use_dispenser-True/.algokit.toml
@@ -3,13 +3,10 @@ min_version = "v1.1.0-beta.4"
 
 [deploy]
 command = "poetry run python -m smart_contracts deploy"
-environment_secrets = []
+environment_secrets = [
+  "DEPLOYER_MNEMONIC",
+  "DISPENSER_MNEMONIC",
+]
 
 [deploy.localnet]
 environment_secrets = []
-
-[deploy.testnet]
-environment_secrets = [
-  "DEPLOYER_MNEMONIC",
-  "DISPENSER_MNEMONIC"
-]
