--- a/tests_generated/test_use_dispenser-True/.algokit.toml
+++ b/tests_generated/test_use_dispenser-True/.algokit.toml
@@ -1,5 +1,5 @@
 [algokit]
-min_version = "v1.1.0-beta.4"
+min_version = "v1.3.0"
 
 [deploy]
 command = "poetry run python -m smart_contracts deploy"
