--- a/copier.yaml
+++ b/copier.yaml
@@ -56,7 +56,12 @@ python_linter:
         Ruff: "ruff"
         Flake8: "flake8"
         No thanks: "none"
-    default: "ruff"
+    default: |-
+        {% if preset_name == 'production' -%}
+            ruff
+        {%- else -%}
+            none
+        {%- endif %}
 
 use_python_black:
     type: bool
