--- a/tests_generated/test_preset_name-production/.copier-answers.yml
+++ b/tests_generated/test_preset_name-production/.copier-answers.yml
@@ -16,10 +16,10 @@ preset_name: production
 project_name: test_preset_name-production
 python_linter: ruff
 use_dispenser: false
-use_github_actions: false
-use_pre_commit: false
+use_github_actions: true
+use_pre_commit: true
 use_python_black: true
-use_python_mypy: false
+use_python_mypy: true
 use_python_pip_audit: true
 use_python_pytest: true
 
