fix: fixing unit tests; removing deprecated algokit method

--- a/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.algokit.toml
+++ b/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.algokit.toml
@@ -2,7 +2,7 @@
 min_version = "v1.4.0"
 
 [deploy]
-command = "poetry run python -m smart_contracts deploy"
+command = "npm run deploy:ci"
 environment_secrets = [
   "DEPLOYER_MNEMONIC",
 ]
