--- a/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.github/workflows/checks.yaml
+++ b/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.github/workflows/checks.yaml
@@ -76,4 +76,4 @@ jobs:
           git diff --exit-code --minimal ./smart_contracts/artifacts || (echo "::error ::Smart contract artifacts have changed, ensure committed artifacts are up to date" && exit 1);
 
       - name: Run deployer against LocalNet
-        run: poetry run python -m smart_contracts deploy
+        run: npm run --prefix smart_contracts deploy:ci
