--- a/tests_generated/test_ide_vscode-False/.copier-answers.yml
+++ b/tests_generated/test_ide_vscode-False/.copier-answers.yml
@@ -8,6 +8,7 @@ author_email: None
 author_name: None
 contract_name: hello_world
 deployment_language: python
+ide_other: true
 ide_vscode: false
 indexer_port: 8980
 indexer_server: http://localhost
