chore: refining terminology regarding which jetbrain ide its aimed for

--- a/copier.yaml
+++ b/copier.yaml
@@ -43,7 +43,7 @@ ide_vscode:
 
 ide_jetbrains:
   type: bool
-  help: Do you want to add JetBrains configuration?
+  help: Do you want to add JetBrains configuration (primarily optimized for PyCharm CE)?
   when: "{{ ide_vscode == false }}"
   default: no
 
