--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -25,10 +25,10 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
 
-      - name: Check formatting with Black
+      - name: Check formatting with Ruff
         run: |
           # stop the build if there are files that don't meet formatting requirements
-          poetry run black --check .
+          poetry run ruff format --check .
 
       - name: Check linting with Ruff
         run: |
