--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,16 @@
 repos:
   - repo: local
     hooks:
-      - id: black
-        name: black
-        description: "Black: The uncompromising Python code formatter"
-        entry: poetry run black
+      - id: ruff-format
+        name: ruff-format
+        description: "Run 'ruff format' for extremely fast Python formatting"
+        entry: poetry run ruff format
         language: system
-        minimum_pre_commit_version: 2.9.2
+        types: [python]
+        args: []
         require_serial: true
-        types_or: [ python, pyi ]
+        additional_dependencies: []
+        minimum_pre_commit_version: "0"
       - id: ruff
         name: ruff
         description: "Run 'ruff' for extremely fast Python linting"
