--- a/tests_generated/test_preset_name-production/pyproject.toml
+++ b/tests_generated/test_preset_name-production/pyproject.toml
@@ -13,7 +13,7 @@ python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["d"], version = "*"}
-ruff = ">=0.0.260"
+ruff = "^0.1.6"
 mypy = "*"
 pytest = "*"
 pytest-cov = "*"
