--- a/tests_generated/test_python_linter-ruff/pyproject.toml
+++ b/tests_generated/test_python_linter-ruff/pyproject.toml
@@ -23,6 +23,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
+line-length = 120
 select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
 ignore = [
   "ANN101", # no type for self
