--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "copier-testing-template"
+name = "template_content"
 version = "0.1.0"
 description = ""
 authors = ["MakerX <cto@makerx.com.au>"]
@@ -13,7 +13,7 @@ python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.0.260"
-black = {extras = ["d"], version = "^22.10.0"}
+black = { extras = ["d"], version = "^22.10.0" }
 flake8 = "^6.0.0"
 pytest = "^7.2.2"
 mypy = "^1.1.1"
@@ -26,11 +26,26 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
+select = [
+  "E",
+  "F",
+  "ANN",
+  "UP",
+  "N",
+  "C4",
+  "B",
+  "A",
+  "YTT",
+  "W",
+  "FBT",
+  "Q",
+  "RUF",
+  "I",
+]
 extend-exclude = [
   "tests_generated/*", # Ignoring generated tests, ruff specific errors are to be caught by pytest
-  "template_content"
-  ]
+  "template_content",
+]
 ignore = [
   "ANN101", # no type for self
   "ANN102", # no type for cls
@@ -39,9 +54,7 @@ unfixable = ["B", "RUF"]
 
 [tool.pytest.ini_options]
 pythonpath = ["tests"]
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
 
 [tool.mypy]
 python_version = "3.10"
