feat: tealer integration

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
@@ -59,6 +59,15 @@
         "cwd": "${workspaceFolder}"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "Analyze TEAL contracts with AlgoKit Tealer integration",
+      "command": "algokit",
+      "args": ["task", "analyze", "${workspaceFolder}"],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "problemMatcher": []
     }
   ]
 }
