--- a/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.github/workflows/checks.yaml
+++ b/tests_generated/test_smart_contract_generator_default_production_preset_typescript/.github/workflows/checks.yaml
@@ -65,6 +65,9 @@ jobs:
         shell: bash
         run: npm run test
 
+      - name: Scan TEAL files for issues
+        run: algokit task analyze . # add --diff flag if you want output stability checks instead
+
       - name: Check output stability of the smart contracts
         shell: bash
         run: |
