refactor: addressing pr comments

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
@@ -63,7 +63,13 @@
     {
       "label": "Analyze TEAL contracts with AlgoKit Tealer integration",
       "command": "algokit",
-      "args": ["task", "analyze", "${workspaceFolder}"],
+      "args": [
+        "task",
+        "analyze",
+        "${workspaceFolder}/.algokit",
+        "--recursive",
+        "--force"
+      ],
       "options": {
         "cwd": "${workspaceFolder}"
       },
