--- a/tests_generated/test_preset_name-production/.pre-commit-config.yaml
+++ b/tests_generated/test_preset_name-production/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
         description: "Run AlgoKit `Tealer` for TEAL static analysis"
         entry: algokit
         language: system
-        args: [task, analyze, "."]
+        args: [task, analyze, ".algokit", "--recursive"]
         require_serial: false
         additional_dependencies: []
         minimum_pre_commit_version: "0"
