--- a/tests_generated/test_use_github_actions-True/.github/workflows/checks.yaml
+++ b/tests_generated/test_use_github_actions-True/.github/workflows/checks.yaml
@@ -59,6 +59,9 @@ jobs:
           set -o pipefail
           poetry run pytest --junitxml=pytest-junit.xml
 
+      - name: Scan TEAL files for issues
+        run: algokit task analyze .algokit --recursive --force # add --diff flag if you want output stability checks instead
+
       - name: Check output stability of the smart contracts
         shell: bash
         run: |
